# xspectratools

./: README.md  setup.cfg  setup.py
Distutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xspectratools/: io.py  rixs.py  sampling.py  statfilters.py  troxas.py  xio.py
xspectratools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xspectratools/assets/: testRixs.py
xspectratools/diffraction/: data_io.py  er.txt
xspectratools/xim/: ximtools.py
