[metadata]
name = xspectratools-nzr111
version = 0.0.1
author = Nick
author_email= nzr@bu.edu
long_description = file: README.md 
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = xspectratools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = xspectratools